# Little_Agent

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: coding_tasks.json
benchmarks/results/main-resume-repro-2026-06-07/: DATA_PROVENANCE.md  harness-regression-v2.json  leno-benchmark-core-report.md
docs/architecture/: agent-harness-v1-overview.md
docs/review-pack/: README.md
examples/mini-leno/: pyproject.toml
examples/mini-leno/mini_leno/: __init__.py  cli.py  context_manager.py  providers.py  runtime.py  workspace.py
examples/mini-leno/tests/: test_agent_loop.py  test_contract.py  test_tools.py
leno/: __init__.py  cli.py  context_manager.py  prompt_prefix.py  runtime.py  security.py  tools.py  workspace.py
leno/evaluation/: evaluator.py  metrics.py
leno/features/: memory.py
leno/providers/: clients.py
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
tests/: test_agent_loop.py  test_allowed_tools.py  test_checkpoint.py  test_context_manager.py  test_evaluator.py  test_leno.py  test_memory.py  test_metrics.py  test_prompt_prefix.py  test_public_api_contract.py  test_run_store.py  test_safety_invariants.py  test_security.py  test_session_store.py  test_task_state.py  test_tool_executor.py  test_tools.py
